proxy_with_workload_identity.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: test
spec: 
  selector: 
    matchLabels: 
      app: approject
  template: 
    metadata: 
      labels: 
        app: approject
    spec: 
      containers: 
        - 
          image: "us-central1-docker.pkg.dev/customer-n-test-service/hello-repo/hello-app:v1"
          name: approject
        - 
          command: 
            - /cloud_sql_proxy
            - "-instances=customer-n-test-service:us-central1:testinstance=tcp:5432"
          image: "gcr.io/cloudsql-docker/gce-proxy:latest"
          name: cloud-sql-proxy
          resources: 
            requests: 
              cpu: 200m
              memory: 32Mi
          securityContext: 
            runAsNonRoot: true
      restartPolicy: Always
      serviceAccountName: testapp
