create-service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: my-nlb-service
spec: 
  ports: 
    - 
      port: 80
      targetPort: 8080
  selector: 
    app: app-project
  type: LoadBalancer
