my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilb-service
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
  labels:
    app: approject
spec:
  type: LoadBalancer
  selector:
    app: approject
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
