ingress-service.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: neg-ing-svc
spec: 
  defaultBackend: 
    service: 
      name: neg-psql-service
      port: 
        number: 80
