internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: gce-internal
  name: ilb-demo-ingress
  namespace: default
spec: 
  defaultBackend: 
    service: 
      name: neg-psql-service
      port: 
        number: 80
